<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">films catalogs</string>
    <string name="movies">Movies</string>
    <string name="tv_show">Tv Show</string>
    <string name="share">Share</string>
    <string name="favorited">Favorited</string>
    <string name="text_share">Film : %1$s, \n\nOverview : \n%2$s</string>

    <string name="title">Title</string>S
    <string name="overview">Overview</string>
</resources>