...
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/images_detail"
        android:layout_width="match_parent"
        android:layout_height="230dp"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        tools:src="@color/purple_500" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_horizontal"
        android:text="@string/title"
        android:textColor="@color/black"
...
